# abb_ros2

abb_bringup/launch/: abb_moveit_irb2600_launch.py
robot_specific_config/abb_irb2600_20_165_moveit_config/: CMakeLists.txt  package.xml
robot_specific_config/abb_irb2600_20_165_moveit_config/config/: abb_irb2600_20_165.srdf.xacro  abb_irb2600_20_165_macro.srdf.xacro
robot_specific_config/abb_irb2600_support/: package.xml
robot_specific_config/abb_irb2600_support/launch/: view_robot.launch.py  view_robot_20.launch.py
robot_specific_config/abb_irb2600_support/urdf/: irb2600_12_165.xacro  irb2600_12_165_macro.xacro  irb2600_20_165.xacro  irb2600_20_165_macro.xacro
