<?xml version="1.0" ?>
<package format="2">
  <name>abb_irb2600_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 2600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 2600 manipulators. This currently includes the 12/1.65
      and the 20/1.65 variants.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <em>ABB IRB 2600 Product Specification</em>.
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Sandro Sanin</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>